[package]
name    = "lpc54606-pac"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"

description   = "Low-level register mappings for the NXP LPC54606 series of ARM Cortex-M4 microcontrollers"
documentation = "https://docs.rs/lpc54606-pac"
repository    = "https://github.com/lpc-rs/lpc-pac"
license       = "0BSD"
readme        = "README.md"
categories    = ["embedded", "hardware-support", "no-std"]
keywords      = ["arm", "cortex-m", "nxp", "lpc", "svd2rust"]


[badges]
travis-ci = { repository = "lpc-rs/lpc-pac" }


[dependencies]
cortex-m    = "0.7.2"
cortex-m-rt = { version = ">=0.6, <0.8", optional = true }
vcell       = "0.1.2"


[features]
rt = ["cortex-m-rt", "cortex-m-rt/device"]
