[package]
edition = "2018"
name = "lpc546xx-pac"
version = "0.1.0"
authors = ["Alexis Marquet <alexis@alexismarquet.com>", "lpc-rs Contributors"]
description = "Device support crates for LPC546xx devices"
repository = "https://github.com/lpc-rs/lpc-pac"
readme = "README.md"
keywords = ["lpc546", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.3"
cortex-m = "0.7.4"

[dependencies.cortex-m-rt]
optional = true
version = ">=0.6.15,<0.8"

[package.metadata.docs.rs]
features = ['rt', 'lpc54628']
default-target = "thumbv7em-none-eabihf"
targets = []

[features]
default = []
rt = ["cortex-m-rt/device"]
lpc54605 = []
lpc54606 = []
lpc54607 = []
lpc54608 = []
lpc54616 = []
lpc54618 = []
lpc54628 = []